syntax = "proto3";
package login;

//个人信息
message UserInfo{
	uint64 UserId = 1;			//ID 
	string Accounts = 2;		//帐号
	string Password = 3;		//密码
	string Name = 4;			//昵称
	string Head = 5;			//头像
	uint32 Sex = 6;				//性别
	uint32 VipLevel = 8;		//VIP级别
	int64 Money = 9;			//金币
}

//注册
message ReqRegister {
    string Account = 1;			//账号
    string Password = 2;		//密码
	string SecurityCode = 3;	//验证码
}

//注册结果
message RespRegister {
    uint32 State = 1;			//0成功 1失败 
    string Hints = 2;			//提示信息
}

//登录
message ReqLogin {
    string Account = 1;			//账号
    string Password = 2;		//密码
	string SecurityCode = 3;	//验证码
	string MachineCode = 4;		//机器码
}

//登陆结果
message RespLogin {
    uint32 State = 1;			//0成功 1失败 
    string Hints = 2;			//提示信息
}
